fix breadcrumbs layout on mobile devices

--- a/src/css/breadcrumb.css
+++ b/src/css/breadcrumb.css
@@ -1,37 +1,75 @@
-ul.breadcrumb {
-  list-style: none;
-  padding: 0;
-}
-
-ul.breadcrumb li {
-  display: inline;
-  font-size: 0.9rem;
-}
-
-ul.breadcrumb li:before {
-  content: none;
-}
-
-ul.breadcrumb li + li:before {
-  padding: 8px;
-  color: black;
-  content: "/\00a0";
-
+.breadcrumb {
   position: relative;
-  border-right: 0;
-  border-bottom: 0;
-  width: 0;
-  height: 0;
-  top: 0;
-  left: 0;
-  transform: none;
-}
 
-ul.breadcrumb li a {
-  color: #0275d8;
-  text-decoration: none;
-}
+  & ul {
+    list-style: none;
+    padding: 0;
 
-ul.breadcrumb li a:hover {
-  text-decoration: underline;
+    position: relative;
+    width: 100%;
+
+    white-space: nowrap;
+
+    overflow-x: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+
+    & li {
+      display: inline;
+      font-size: 0.9rem;
+
+      display: inline-block;
+
+      &:before {
+        content: none;
+      }
+
+      &.other-page {
+        display: none;
+
+        & + li:before {
+          content: none;
+        }
+
+        @media (--media-desktop-size) {
+          display: inline-block;
+
+          & + li:before {
+            content: "/\00a0";
+          }
+        }
+      }
+
+      &.active-page {
+        display: none;
+
+        @media (--media-desktop-size) {
+          display: inline-block;
+        }
+      }
+
+      & + li:before {
+        padding: 8px;
+        color: black;
+        content: "/\00a0";
+
+        position: relative;
+        border-right: 0;
+        border-bottom: 0;
+        width: 0;
+        height: 0;
+        top: 0;
+        left: 0;
+        transform: none;
+      }
+
+      & a {
+        color: #0275d8;
+        text-decoration: none;
+      }
+
+      & a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
